# MM

./: .gitignore  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  FFTW_LINK_FIX_0_5_78.md  FT4_DISPLAY_DIAGNOSTICS_0_5_77_experimental.md  FT4_SNR_SPEED_0_5_78_lab15.md  GITHUB_RELEASE_TAGGING_0_5_77_experimental.md  LICENSE.md  MADMODEM_VERSION.txt  MAIN_WINDOW_FRAME_0_5_77_experimental.md  MIND_PHASE2_IMPLEMENTATION_0_5_78_lab1.md  MIND_PHASE2_READINESS_TRIGGER_0_5_78_lab6.md  MIND_PHASE3_AB_COMPARE_0_5_78_lab13.md  MIND_PHASE3_PASSIVE_0_5_78_lab14.md  MIND_PHASE3_READINESS_ICONS_0_5_78_lab3.md  MadModemVersion.h  MadModem_0_5_27_TX_PTT_PREFLIGHT_README.txt  Makefile  RADIO_TELESCOPE_0_5_77_experimental.md  RADIO_TELESCOPE_0_5_77_experimental_HEXCENTER_WINDOWS_NAVBALL.md  RADIO_TELESCOPE_0_5_77_experimental_HEXMAP_FIX.md  RADIO_TELESCOPE_0_5_77_experimental_SAFETY.md  RADIO_TELESCOPE_0_5_77_experimental_UI_CONTRAST.md  RADIO_TELESCOPE_0_5_77_experimental_WELCH_PSD.md  RADIO_TELESCOPE_0_5_79_lab19.md  RADIO_TELESCOPE_0_5_79_lab20.md  RADIO_TELESCOPE_0_5_79_lab22.md  RADIO_TELESCOPE_0_5_79_lab23.md  RADIO_TELESCOPE_0_5_79_lab24.md  README.md  RELEASE_NOTES.md  ROTATOR_SETUP_CONNECTION_0_5_77_experimental.md  SETTINGS_EXIT_FREEZE_FIX_0_5_77_experimental.md  SETTINGS_LAYOUT_CLEANUP_0_5_77_experimental.md  SETTINGS_OPEN_LAZY_LOAD_0_5_77_experimental.md  THIRD_PARTY_NOTICES.md  TRANSLATION_AUDIT.md  VERSION  build_all.sh  (+10 more)
.github/workflows/: build-distribution.yml  build-macos.yml
ai/: DeepDspController.cpp  DeepDspController.h  DeepDspProfileNet.cpp  DeepDspProfileNet.h  DeepDspTinyNet.cpp  DeepDspTinyNet.h
audio/: AudioBlock.h  AudioEngine.cpp  AudioEngine.h  FtTxWorker.cpp  FtTxWorker.h  TxAudioEngine.cpp  TxAudioEngine.h
cmake/: GenerateMadModemQtHelp.cmake
cmake/macos/: GenerateMacOSIcon.cmake  Info.plist.in
core/tx/: TxModulator.h
dialogs/: AppSettingsDialog.cpp  AppSettingsDialog.h  AudioSettingsDialog.cpp  AudioSettingsDialog.h  AudioSettingsDialog.ui  BandSchedulerDialog.cpp  BandSchedulerDialog.h  HelpDialog.cpp  HelpDialog.h  LogbookDialog.cpp  LogbookDialog.h  LogbookSettingsDialog.cpp  LogbookSettingsDialog.h  RigControlSettingsDialog.cpp  RigControlSettingsDialog.h  SoundCardCalibrationDialog.cpp  SoundCardCalibrationDialog.h  SstvImageEditorDialog.cpp  SstvImageEditorDialog.h  TextMacroSettingsDialog.cpp  TextMacroSettingsDialog.h
docs/: AUTOQSO_MM_FLOW_EDITOR_GUIDA_IT.md  BAND_FREQUENCY_SCHEDULER_v2.80.md  CAT_DIALOG_LAYOUT_v2.36.md  CAT_PTT_WSJTX_CLEANUP_v2.61.md  CTY_COUNTRY_FILE_v2.55.md  CW_ADAPTIVE_DECODER_NOTES_v2.57.md  CW_ADAPTIVE_DECODER_v2.58.md  CW_FLDIGI_RX_NOTES_v2.64.md  DDSP_SHADOW_LEARNING_LAB.md  FT_DECODE_DEPTH_UI_v2.30.md  FT_MSHV_INTEGRAL_ASSIMILATION_v2.22.md  FT_SEQUENCER_REGRESSION_v2.08.md  FT_WAV_ANALYSIS_v2.24.md  FT_WAV_DIAGNOSTICS_v2.25.md  LOCALIZATION_AUDIT_v2.31.md  LOCALIZATION_AUDIT_v2.80.md  LOGBOOK_ADIFMASTER_UI_v2.41.md  LOGBOOK_LOCALIZATION_v2.42.md  LOGBOOK_MAP_LARGE_ADIF_v2.40.md  LOGBOOK_PDF_COLUMN_BLOCKS_v2.51.md  LOGBOOK_PDF_PAGE_WIDTH_v2.53.md  QSO_MAP_BEHAVIOR_MODES_v2.54.md  QSO_MAP_EXPORT_v2.33.md  QSO_MAP_I18N_v2.48.md  QT_HELP_BACKEND_v2.72.md  README.md  RELEASE_VALIDATION_0_5_78.md  SOURCE_AUDIT.md  VERSIONING.md
docs/architecture/: CURRENT_ARCHITECTURE_0_5_78.md  FT8_DECODER_BASELINE.md  WSJTX_ALIGNMENT_v2.02.md  WSJTX_ALIGNMENT_v2.03.md  WSJTX_SEQUENCER_TXPLAN_v2.07.md  WSJTX_SESSION_ARCHITECTURE_v2.05.md
docs/audit/: FT_UI_READABILITY_0_5_76E.md  FT_UI_READABILITY_0_5_78_lab17.md  MSHV_RX_COMPLETION_0_5_76.md  MSK144_ASYNC_UI_CLEANUP_0_5_76D.md  MSK144_Q65_RUNTIME_HOTFIX_0_5_76C.md  Q65_COMPLEX_FFTW_HOTFIX_0_5_76A.md  Q65_MATH_COMPAT_HOTFIX_0_5_76B.md  STATIC_AUDIT_0_5_75B.md
docs/cwskimmer/: API.md  ARCHITECTURE.md  BUILD_NOTES_0_5_72a.md  BUILD_NOTES_0_5_72b.md  BUILD_NOTES_0_5_72c.md  DECODER_SELECTION.md  INTEGRATION_PLAN_MM.md  PORTING_NOTES_HAMFIST.md  THIRD_PARTY_NOTICES.md  THREADING.md  WATERFALL_OSD.md
docs/help/: MM_cs.qhcp  MM_cs.qhp  MM_de.qhcp  MM_de.qhp  MM_en.qhcp  MM_en.qhp  MM_fr.qhcp  MM_fr.qhp  MM_it.qhcp  MM_it.qhp  MM_no.qhcp  MM_no.qhp  style.css
docs/history/: CHANGELOG_PRE_0_5_78.md  MACOS_QT6_MSHV_COMPLEX_MACRO_FIX_0_5_78.md  RELEASE_NOTES_PRE_0_5_78.md  (+1 more)
dsp/: DspEngine.cpp  DspEngine.h  FrequencyMarker.h  FrequencyTracker.cpp  FrequencyTracker.h
dxcc/: CtyCountryFile.cpp  CtyCountryFile.h
flow/: MmFlowCapabilityManager.cpp  MmFlowCapabilityManager.h  MmFlowRuntime.cpp  MmFlowRuntime.h
logbook/: AdifLogbook.cpp  AdifLogbook.h
qml/: QsoLocationMap.qml  QsoLocationMapQt6.qml
rig/: HamlibController.cpp  HamlibController.h
rotator/: CatRotatorController.cpp  CatRotatorController.h  CatRotatorPanel.cpp  CatRotatorPanel.h  NavballWidget.cpp  NavballWidget.h  RotatorPeakSearch.cpp  RotatorPeakSearch.h
scripts/: build_linux_github.sh  build_macos.sh  build_windows_msys2.sh  build_windows_mxe.sh  check_macos_portability.sh  ci_release_version_guard.sh  package_linux_github.sh  package_macos.sh  package_windows_msys2.sh  package_windows_mxe.sh  validate_release_assets.sh
settings/: AppSettings.cpp  AppSettings.h
tests/: FtSequencerSelfTest.cpp
tools/: apply_translation_overrides_v311b.py  audit_documentation.py  audit_localization.py  audit_ui_translations.py  package_mm_zip.sh  release_078_exact.py  update_ui_translations.py
translations/: ui_cs.ini  ui_de.ini  ui_en.ini  ui_fr.ini  ui_it.ini  ui_no.ini
tx/: CwTransmitter.h  Ft8Transmitter.cpp  Ft8Transmitter.h  HellschreiberTransmitter.cpp  HellschreiberTransmitter.h  MfskTransmitter.cpp  MfskTransmitter.h  RttyTransmitter.cpp  RttyTransmitter.h  SstvTransmitter.h  WeatherFaxTransmitter.h
utils/: CockpitTheme.cpp  CockpitTheme.h  QtCompat.h  RuntimeI18n.cpp  RuntimeI18n.h  UiScale.h
widgets/: AutoQsoFlowEditorWidget.cpp  AutoQsoFlowEditorWidget.h  DdspPanelWidget.cpp  DdspPanelWidget.h  FaxImageWidget.cpp  FaxImageWidget.h  QsoMapWidget.cpp  QsoMapWidget.h  RadioTelescopeHeatmapWidget.cpp  RadioTelescopeHeatmapWidget.h  RttyScopeWidget.cpp  RttyScopeWidget.h  WaterfallWidget.cpp  WaterfallWidget.h
(+325 files in other folders)
